[project]
name = "samaritan-memory-mcp"
version = "0.1.0"
description = "Hybrid memory MCP server combining Qdrant semantic search and Neo4j knowledge graph"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "neo4j>=5.0.0",
]

[project.scripts]
samaritan-memory = "samaritan_memory.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
